--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     </div>
                     <div class="game__p__text">
                         <p>With our teachers who write a program for <br>each student, you will be able to make your
-                            <br>first sketch after the first lesson.</p>
+                            <br>first sketch after the first lesson.
+                        </p>
                     </div>
                     <div class="game__button__big">
                         <button class="game__button__smoll">Get started</button>
@@ -52,34 +53,92 @@
             </div>
         </div>
     </div>
-    <div class="notebook">
-        <div class="container">
-            <div class="notebook__auto">
-                <h1>Skills</h1>
-            </div>
-            <div class="notebook__opshe">
-                <div class="notebook__bog__img">
-                    <img src="img/Shared goals-bro.png">
+    <div class="container">
+        <main>
+            <div class="main__left">
+                <div class="main__left__long">
+                    <div class="main__left__img">
+                        <img src="img/Shared goals-bro.png">
+                    </div>
+                    <div class="main__smool__text">
+                        <div class="main__left__text">
+                            <h1>Speaking</h1>
+                        </div>
+                        <div class="main__left__text__p">
+                            <p class="main__left__text__paragrof">Improve your English skills and confidence. <br>
+                                Live classes and interactive lessons online. <br>
+                                20% extra free for a limited time only <br>
+                                <br><br>
+                                Learn English online and improve your <br>
+                                skills through our high-quality courses <br>
+                                and resources – all designed for adult <br> language learners.
+                            </p>
+                        </div>
+                        <div class="main__left__text__button">
+                            <button class="main__smool__text__button">Learn more</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="notebook__text__text">
-                    <div class="notebook__h1__text">
-                        <h1>Speaking</h1>
+            </div>
+            <div class="main__right">
+                <div class="main__top">
+                    <div class="main__top__left">
+                        <div class="main__top__left__img">
+                            <img src="./img/Typewriter-bro.png">
+                        </div>
+                        <div class="main__top__left__smool">
+                            <div class="main__top__left__smool__h1">
+                                <h1>Writing</h1>
+                            </div>
+                            <div class="main__top__left__smool__p">
+                                <p>One of the most important and extensive <br>
+                                    areas of natural science, the science that <br>
+                                    studies substances, also their composition </p>
+                            </div>
+                            <div class="main__top__left__smool__button">
+                                <button class="main__left__smool__button">Learn more</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="notebook__p__text">
-                        <p>Improve your English skills and confidence. <br>
-                            Live classes and interactive lessons online. <br>
-                            20% extra free for a limited time only <br><br>
-
-                            Learn English online and improve your <br>
-                            skills through our high-quality courses <br>
-                            and resources – all designed for adult <br> language learners.</p>
+                    <div class="main__top__right">
+                        <div class="main__top__left__imf">
+                            <img src="./img/House bookshelves-bro 2.png">
+                        </div>
+                        <div class="main__top__left__smool">
+                            <div class="main__top__left__smool__h1">
+                                <h1>Reading</h1>
+                            </div>
+                            <div class="main__top__left__smool__p">
+                                <p>perception and response actions of the<br>
+                                    resulting from the use and/or upcoming <br>
+                                    of the product, system or service</p>
+                            </div>
+                            <div class="main__top__left__smool__button">
+                                <button class="main__left__smool__button">Learn more</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="notebook__button__text">
-                        <button class="notebook__smoll__text">Learn more</button>
+                </div>
+                <div class="main__botton">
+                    <div class="main__botton__text">
+                        <div class="main__botton__h1">
+                            <h1>Listening</h1>
+                        </div>
+                        <div class="main__botton__p">
+                            <p>Here you can find activities to practise <br>
+                                your listening skills. Listening will help you <br>
+                                to improve your understanding </p>
+                        </div>
+                        <div class="main__botton__button">
+                            <button class="main__smoll__button">Learn more</button>
+                        </div>
+                    </div>
+                    <div class="main__botton__img">
+                        <img src="img/Podcast audience-bro 1.png">
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
     </div>
 </body>
 
