--- a/index.html
+++ b/index.html
@@ -4,142 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="./index.css">
     <title>Britlex</title>
 </head>
 
 <body>
-    <div class="game__menu">
-        <div class="container">
-            <div class="game__header">
-                <div class="game__logo">
-                    <img src="img/Britlex.png">
-                </div>
-                <div class="game__big__taxt">
-                    <div class="game__smoll__text">
-                        <ul class="game__smoll">
-                            <li class="game__taxt">Home</li>
-                            <li class="game__taxt">Skills</li>
-                            <li class="game__taxt">About Us</li>
-                            <li class="game__taxt">Pricing</li>
-                            <li class="game__taxt">Contacts</li>
-                        </ul>
+    <header>
+        <var>
+            <div class="container">
+                <div class="navbar">
+                    <div class="container__logo">
+                        <img src="img/Britlex.png" class="logo__child">
                     </div>
-                </div>
-                <div class="game__buttom">
-                    <button class="game__smoll__button">Let’s Talk</button>
+                    <ul class="container__listes">
+                        <li class="list_item"><a href="#!">Home</a></li>
+                        <li class="list_item"><a href="#!">Skills</a></li>
+                        <li class="list_item"><a href="#!">About Us</a></li>
+                        <li class="list_item"><a href="#!">Pricing</a></li>
+                        <li class="list_item"><a href="#!">Contacts</a></li>
+                    </ul>
+                    <div class="container__btn">
+                        <button class="btn">Let’s Talk</button>
+                    </div>
                 </div>
             </div>
-            <div class="game__botton__everyone">
-                <div class="game__botton__text">
-                    <div class="game__h1__text">
-                        <h1>Learn <br> Any Foreign <br>Language</h1>
-                    </div>
-                    <div class="game__p__text">
-                        <p>With our teachers who write a program for <br>each student, you will be able to make your
-                            <br>first sketch after the first lesson.
-                        </p>
-                    </div>
-                    <div class="game__button__big">
-                        <button class="game__button__smoll">Get started</button>
+        </var>
+        <div class="container">
+            <div class="header_page">
+                <div class="header_left_page">
+                    <h1 class="header_text">Learn <br> Any Foreign <br> Language</h1>
+                    <p class="header_paragraf">With our teachers who write a program for <br>
+                        each student, you will be able to make your <br>
+                        first sketch after the first lesson.</p>
+                    <button class="header_btn">Get started</button>
+                    <div class="header_position">
+                        <img src="img/Group.png" class="position_lamp">
                     </div>
                 </div>
-                <div class="game__img">
-                    <img src="img/Learning languages-bro 1.png" class="game__img__smoll">
-                </div>
-                <div class="game__group">
-                    <img src="img/Group.png">
+                <div class="header_right_page">
+                    <img src="img/Learning languages-bro 1.png" class="header_image">
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <main>
-            <div class="main__left">
-                <div class="main__left__long">
-                    <div class="main__left__img">
-                        <img src="img/Shared goals-bro.png">
-                    </div>
-                    <div class="main__smool__text">
-                        <div class="main__left__text">
-                            <h1>Speaking</h1>
-                        </div>
-                        <div class="main__left__text__p">
-                            <p class="main__left__text__paragrof">Improve your English skills and confidence. <br>
-                                Live classes and interactive lessons online. <br>
-                                20% extra free for a limited time only <br>
-                                <br><br>
-                                Learn English online and improve your <br>
-                                skills through our high-quality courses <br>
-                                and resources – all designed for adult <br> language learners.
-                            </p>
-                        </div>
-                        <div class="main__left__text__button">
-                            <button class="main__smool__text__button">Learn more</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="main__right">
-                <div class="main__top">
-                    <div class="main__top__left">
-                        <div class="main__top__left__img">
-                            <img src="./img/Typewriter-bro.png">
-                        </div>
-                        <div class="main__top__left__smool">
-                            <div class="main__top__left__smool__h1">
-                                <h1>Writing</h1>
-                            </div>
-                            <div class="main__top__left__smool__p">
-                                <p>One of the most important and extensive <br>
-                                    areas of natural science, the science that <br>
-                                    studies substances, also their composition </p>
-                            </div>
-                            <div class="main__top__left__smool__button">
-                                <button class="main__left__smool__button">Learn more</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="main__top__right">
-                        <div class="main__top__left__imf">
-                            <img src="./img/House bookshelves-bro 2.png">
-                        </div>
-                        <div class="main__top__left__smool">
-                            <div class="main__top__left__smool__h1">
-                                <h1>Reading</h1>
-                            </div>
-                            <div class="main__top__left__smool__p">
-                                <p>perception and response actions of the<br>
-                                    resulting from the use and/or upcoming <br>
-                                    of the product, system or service</p>
-                            </div>
-                            <div class="main__top__left__smool__button">
-                                <button class="main__left__smool__button">Learn more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="main__botton">
-                    <div class="main__botton__text">
-                        <div class="main__botton__h1">
-                            <h1>Listening</h1>
-                        </div>
-                        <div class="main__botton__p">
-                            <p>Here you can find activities to practise <br>
-                                your listening skills. Listening will help you <br>
-                                to improve your understanding </p>
-                        </div>
-                        <div class="main__botton__button">
-                            <button class="main__smoll__button">Learn more</button>
-                        </div>
-                    </div>
-                    <div class="main__botton__img">
-                        <img src="img/Podcast audience-bro 1.png">
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
+    </header>
+
+
+
+
+
+
+
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
