--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <var>
             <div class="container">
-                <div class="navbar">
+                <div class="wow bounceInDown navbar" data-wow-duration="2s">
                     <div class="container__logo">
                         <img src="img/Britlex.png" class="logo__child">
                     </div>
@@ -32,7 +32,7 @@
         </var>
         <div class="container">
             <div class="header_page">
-                <div class="header_left_page">
+                <div class="wow bounceInRight header_left_page" data-wow-duration="2s">
                     <h1 class="header_text">Learn <br> Any Foreign <br> Language</h1>
                     <p class="header_paragraf">With our teachers who write a program for <br>
                         each student, you will be able to make your <br>
@@ -42,7 +42,7 @@
                         <img src="img/Group.png" class="position_lamp">
                     </div>
                 </div>
-                <div class="header_right_page">
+                <div class="wow bounceInLeft header_right_page" data-wow-duration="2s">
                     <img src="img/Learning languages-bro 1.png" class="header_image">
                 </div>
             </div>
